# anvil-plan-spec

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  action.yml  package.json  pnpm-lock.yaml
.aps/: config.yml
.claude/hooks/: session-start.sh
.claude/skills/aps-escalation-queue/: skill.meta.json
.claude/skills/aps-gate-policy/: SKILL.md
.claude/skills/aps-landing/: SKILL.md  skill.meta.json
.claude/skills/aps-loop/: SKILL.md  skill.meta.json
.claude/skills/aps-resume/: skill.meta.json
.claude/skills/aps-task-router/: SKILL.md  skill.meta.json
.claude/skills/dev-workflow/: SKILL.md
.claude/skills/triage-product-vs-technical/: skill.meta.json
.codex/skills/aps-escalation-queue/: SKILL.md
.codex/skills/aps-gate-policy/: skill.meta.json
.codex/skills/aps-loop/: skill.meta.json
.codex/skills/aps-probe/: SKILL.md  skill.meta.json
.codex/skills/aps-resume/: SKILL.md
.codex/skills/aps-safety-rails/: SKILL.md  skill.meta.json
.codex/skills/dev-workflow/: skill.meta.json
.codex/skills/planning-workflow/: SKILL.md  skill.meta.json
.codex/skills/triage-product-vs-technical/: SKILL.md
.github/workflows/: ci.yml  lint-docs.yml  release.yml
aps-planning/: SKILL.md
cli/: Cargo.toml
cli/src/: audit.rs  config.rs  date.rs  doctor.rs  export.rs  lint.rs  main.rs  managed.rs  migrate.rs  next.rs  orchestrate.rs  parser.rs  rollup.rs  scaffold.rs  setup.rs  update.rs  wizard.rs
docs/: TERMINOLOGY.md  agent-testing.md  agents.md  ai-agent-guide.md  checkout-checkin.md  ci-lint-example.yml  conductor-modules.md  dashboard.md  getting-started.md  installation.md  integrations.md  monorepo.md  release-planning.md  team-rollout.md  usage.md  workflow.md
docs/ai/prompting/: README.md  actions.prompt.md  index.prompt.md  module.prompt.md
docs/assets/: README.md
docs/plans/: 2026-02-27-onboarding-design.md  2026-03-08-aps-v2-architecture-review.md  2026-03-10-checkout-checkin.design.md  2026-03-10-dashboard.design.md  2026-03-15-agent-cross-harness-test-plan.md  2026-03-16-aps-migration-design.md  2026-03-16-kindling-integration-research.md
docs/release-notes/: v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md
docs/solutions/: README.md
docs/solutions/planning/: context-package-regeneration.md
examples/monorepo-nested/plans/: index.aps.md
examples/opencode-companion/: index.aps.md
examples/opencode-companion/execution/: CORE-001.actions.md
examples/opencode-companion/modules/: core.aps.md  ui.aps.md
examples/team-payments/: index.aps.md
examples/team-payments/modules/: checkout-ui.aps.md  payments-api.aps.md  payments-launch.aps.md
examples/user-auth/: index.aps.md
lib/: Lint.psm1  Scaffold.psm1  audit.sh  export.sh  lint.sh  orch.sh  orchestrate.sh  scaffold.sh
lib/rules/: Common.psm1  Index.psm1  Module.psm1  WorkItem.psm1  common.sh  index.sh  module.sh  workitem.sh
mcp/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
mcp/src/: index.ts  route.ts
mcp/test/: route.test.ts  server.test.ts
packaging/scoop/: aps.json
plans/: completed.aps.md  index.aps.md  issues.md
plans/brainstorms/: 2026-06-15-aps-upstream-brief.md
plans/designs/: 2026-01-21-monorepo-support-design.md  2026-06-08-orchestrate.design.md  2026-06-27-nested-plans.design.md  2026-07-19-team-coordination.design.md  2026-07-22-cli-redesign.design.md
plans/execution/: DOGFOOD-002.actions.md  INSTALL-010.actions.md  MONO-001.actions.md  MONO-002.actions.md  MONO-003.actions.md  MONO-008.actions.md  ORCH-001.actions.md  ORCH-006.actions.md  TUI-001.actions.md  TUI-002.actions.md  TUI-003.actions.md
plans/modules/: agents.aps.md  ci-parity.aps.md  cli-redesign.aps.md  compound.aps.md  conductor.aps.md  continuous-improvement-backlog.aps.md  docs.aps.md  dogfood.aps.md  examples.aps.md  install.aps.md  integrations.aps.md  monorepo.aps.md  orchestrate.aps.md  package-views.aps.md  prompts.aps.md  release-planning.aps.md  scaffold.aps.md  spec.aps.md  tasks.aps.md  team-coordination.aps.md  templates.aps.md  tui.aps.md  validation.aps.md
plans/releases/: v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md
plans/research/: 2026-07-23-harness-expansion-spike.md  orchestration-patterns.md
plans/reviews/: APS-USABILITY-REVIEW.md
scaffold/: init.sh  install  install.ps1  update  update.ps1  upgrade
scaffold/agents/: build.sh
scaffold/designs/: .design.template.md
scaffold/plans/: aps-rules-v2.md  aps-rules.md
templates/: actions.template.md  completed-index.template.md  conductor.template.md  index-child.template.md  index-expanded.template.md  index-monorepo.template.md  index-nested.template.md  index.template.md  issues.template.md  module.template.md  quickstart.template.md  release.template.md  simple.template.md  solution.template.md
test/: cli-parity.sh  native-user-journey.sh  orchestrate-nested.sh  orchestrate.sh  ps-parity.ps1  run.sh  windows-user-journey.ps1
(+79 files in other folders)
