[package]
name = "aps-cli"
version = "0.4.0-dev"
edition = "2024"
license = "Apache-2.0"
description = "Anvil Plan Spec — native Rust CLI and TUI wizard"
repository = "https://github.com/EddaCraft/anvil-plan-spec"
readme = "../README.md"
publish = false

[[bin]]
name = "aps"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["bracketed-paste"] }
eddacraft-tui = { git = "https://github.com/EddaCraft/eddacraft-tui", rev = "2de997dc2d3bde54adc174834c2089efb0a2002a" }
ratatui = "0.30"

[lints.rust]
unsafe_code = "forbid"

# Small, self-contained release binaries for GitHub release assets.
[profile.release]
lto = true
codegen-units = 1
strip = true
