[package]
name = "aps-cli"
version = "0.6.0"
edition = "2024"
license = "Apache-2.0"
description = "Anvil Plan Spec — native Rust CLI and TUI wizard"
repository = "https://github.com/EddaCraft/anvil-plan-spec"
homepage = "https://github.com/EddaCraft/anvil-plan-spec"
documentation = "https://github.com/EddaCraft/anvil-plan-spec/blob/main/docs/usage.md"
readme = "../README.md"
keywords = ["planning", "spec", "cli", "agents", "tui"]
categories = ["command-line-utilities", "development-tools"]
# Published to crates.io. All dependencies carry crates.io versions
# (eddacraft-tui shipped 0.4.0). Distribution channels: crates.io source publish
# (`cargo install aps-cli`), GitHub release binaries, and `cargo binstall`
# (configured below). One semver across channels.
#
# The scaffold assets embedded via include_str! live at the repo root
# (../scaffold, ../templates) so the bash CLI can share them. `scaffold` and
# `templates` here are symlinks into those dirs; `cargo package` dereferences
# them and bakes real files into the tarball, so source builds resolve the
# `../scaffold/...` paths without duplicating the assets in git.
publish = true

[[bin]]
name = "aps"
path = "src/main.rs"

# cargo-binstall: fetch the prebuilt binary from GitHub releases instead of
# compiling. Asset layout matches .github/workflows/release.yml
# (aps-<target>.tar.gz on unix, aps-<target>.zip on Windows; binary at archive
# root). One semver across channels — { version } is the release tag (D-036).
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/aps-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-gnu]
pkg-fmt = "zip"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["bracketed-paste"] }
eddacraft-tui = "0.4"
ratatui = "0.30"

[lints.rust]
unsafe_code = "forbid"

# Small, self-contained release binaries for GitHub release assets.
[profile.release]
lto = true
codegen-units = 1
strip = true
